# DovesDataLogger

./: .clang-tidy  .gitignore  ARCHITECTURE.md  BirdsEye.ino  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  README.md  SECURITY.md  accelerometer.ino  bluetooth.ino  diagram.json  display_config.h  display_pages.ino  display_ui.ino  gps_config.h  gps_functions.ino  images.h  index.html  libraries.txt  manifest.json  project.h  replay.ino  sd_functions.ino  settings.ino  tachometer.ino
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
BirdsEye/: BirdsEye.ino  accelerometer.h  accelerometer.ino  bluetooth.h  bluetooth.ino  crc32.cpp  crc32.h  display_config.h  display_pages.h  display_pages.ino  display_ui.h  display_ui.ino  dovex_header.cpp  dovex_header.h  filename_validator.cpp  filename_validator.h  firmware_ota.h  firmware_ota.ino  gps_functions.h  gps_functions.ino  gps_time.cpp  gps_time.h  gps_validation.cpp  gps_validation.h  haversine.cpp  haversine.h  lap_format.cpp  lap_format.h  project.h  replay.h  replay.ino  sd_access_policy.cpp  sd_access_policy.h  sd_functions.h  sd_functions.ino  settings.h  settings.ino  tach_filter.cpp  tach_filter.h  tachometer.h  (+1 more)
CASE/: MAIN-ASSEMBLY - BATTERY-Assembly-1 batter-lid-1.STL  MAIN-ASSEMBLY - BATTERY-Assembly-1 batter-lid-1500mah-1.STL  (+14 more)
tests/: CMakeLists.txt  README.md  crc32_test.cpp  dovex_header_test.cpp  filename_validator_test.cpp  gps_time_test.cpp  gps_validation_test.cpp  haversine_test.cpp  lap_format_test.cpp  sd_access_policy_test.cpp  tach_filter_test.cpp  test_main.cpp
(+72 files in other folders)
